# oulad-causal-inference

./: Makefile  README.md  proposal.md  pyproject.toml  requirements.txt
data/metadata/: category_frequency_summary.csv  data_validation_summary.json  date_range_summary.csv  duplicate_key_summary.csv  missingness_summary.csv  raw_file_inventory.csv  schema_validation.csv  table_shapes.csv
data/processed/: balance_table_main.csv  cohort_flow_table.csv  cohort_summary.json  dag_variable_availability.csv  discovery_adjacency_fci.csv  discovery_adjacency_ges.csv  discovery_adjacency_pc.csv  discovery_analysis_data.parquet  discovery_edges.csv  discovery_edges_fci.csv  discovery_edges_ges.csv  discovery_edges_pc.csv  discovery_hand_dag_comparison.csv  discovery_preprocessing_map.json  discovery_run_metadata.json  discovery_stability_edges.csv  effect_estimates_main.csv  primary_dag.yaml  (+5 more)
docs/: data_dictionary.md  decisions_log.md  discovery_summary.md  estimation_summary.md  identification_plan.md  presentation_asset_plan.md  reproducibility_runbook.md  robustness_summary.md
notebooks/: 01_data_audit.ipynb  02_dag_and_discovery_review.ipynb  03_effect_estimation_review.ipynb  04_presentation_figures.ipynb
scripts/: build_cohort.py  build_report_assets.py  check_repo_health.py  run_data_validation.py  run_discovery.py  run_estimation.py  run_pipeline.py  run_robustness.py
tests/: test_cohort.py  test_dag.py  test_discovery.py  test_estimation.py  test_features.py  test_io.py  test_pipeline.py  test_robustness.py  test_script_cli.py  test_validation.py  test_viz.py
(+25 files in other folders)
