[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oulad-causal"
version = "0.1.0"
description = "Causal discovery and inference project for early online engagement and course completion in OULAD."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "networkx",
    "pydot",
    "causal-learn",
    "jupyter",
    "ipykernel",
    "pytest",
    "pyarrow",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

